# f1-clickhouse-analytics

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: quality.yml
clickhouse/init/: 01_create_databases.sql  02_create_raw_tables.sql  03_create_monitoring_tables.sql  04_create_materialized_views.sql  05_create_app_user.sql  06_create_kafka_ingestion.sql
clickhouse/maintenance/: clean_data.sql
data/raw/: README.md
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml  pyproject.toml
dbt/macros/: deduplicate.sql
dbt/models/: schema.yml
dbt/models/dwh/: dim_constructors.sql  dim_drivers.sql  dim_races.sql  fact_lap_times.sql  fact_pit_stops.sql  fact_race_results.sql
dbt/models/marts/: mart_constructor_performance.sql  mart_driver_performance.sql  mart_lap_time_analysis.sql  mart_pit_stop_efficiency.sql  mart_season_summary.sql
dbt/models/staging/: stg_circuits.sql  stg_constructors.sql  stg_drivers.sql  stg_lap_times.sql  stg_pit_stops.sql  stg_qualifying.sql  (+2 more)
docs/: architecture.md  deduplication.md  demo_script.md  deployment.md  grafana.md  runbook.md
grafana/dashboards/: f1_loader_monitoring.json
loader/: Dockerfile  config.yaml  load_static.py  main.py  pyproject.toml  replay_loader.py
loader/src/: clickhouse_client.py  csv_utils.py  kafka_producer.py  monitoring.py
loader/tests/: test_kafka_producer.py  test_monitoring.py  test_replay_loader.py
presentation/: f1_clickhouse_project_defense.pptx  speaker_notes.md
scripts/: demo_show.sh
superset/: Dockerfile  import_dashboard.sh
(+2 files in other folders)
