[project]
name = "f1-loader"
version = "0.1.0"
description = "F1 data replay loader for ClickHouse"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect==0.8.7",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
dev-dependencies = ["ruff==0.8.6"]
